--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=booking
+
+#spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
+# Server port
+server.port=8090
+
+# Datasource connection
+spring.sql.init.platform=mysql
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/footarena
+spring.datasource.username=moha
+spring.datasource.password=azerty
+
+# Hibernate
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.show-sql=true
+
+jwt.secret=change-me_change-me_change-me_change-me
+
+spring.profiles.active=dev
